# python-balanceboard

./: .gitignore  BalanceBoard.cpp  BalanceBoard.h  CMakeLists.txt  README.md  balance.py  balanceboard.pyx  example.c  python-wiicpp.cpp  python-wiicpp.h  python-wiicpp.pyx  setup.py  wiic.c
